# aletheion-llm

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  ALETHEION_LEVEL1_README.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYRIGHT  Dockerfile  Fractal_Epistemic_Architecture_for_Large_Language_Models.pdfZone.Identifier  GIT_HISTORY_EVIDENCE.txt  GOVERNANCE.md  LICENSE-COMMERCIAL.md  NOTICE  PRIOR_ART.md  README.md  ROADMAP.md  Report.md  SECURITY.md  SUPPORT.md  TRAINING_GUIDE.md  TRAINING_SCRIPTS_COMPARISON.md  TRUTHFULQA_SETUP.md  docker-compose.yaml  manifest.ion  mkdocs.yml  pyproject.toml  quick_eval.py  requirements.txt  train_aletheion.py
.github/: PULL_REQUEST_TEMPLATE.md  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
audit/: AUDIT_REPORT.md  AUDIT_REPORT_2025-11-07.md
config/: aletheion_level1.yaml  default.yaml  medium.yaml  small.yaml
data/: __init__.py  dataset.py  prepare.py
docs/: ALETHEION_LEVEL1_README.md  BUGFIX_CALIBRATION.md  CHANGELOG.md  IMPLEMENTATION_NOTES.md  PYRAMIDAL_EPISTEMOLOGY_README.md  PYRAMIDAL_Q1Q2_FRACTAL.md  QUANTITATIVE_METRICS_ANALYSIS.md  README.md  TRAINING_SCRIPTS_COMPARISON.md  TRUTHFULQA_SETUP.md  aletheion-fractal-approach.md  aletheion-integration.md  attention-mechanisms.md  llm-failures.md  llm-fundamentals.md  remaining-limitations.md  training-strategy.md
docs/progress/: HOW_TO_PROGRESS_2025-11-08.md  PROGRESS_REPORT_2025-11-08.md
examples/: README.md  eval.py  generate.py  quick_eval.py  test_calibration_fix.py  train.py  train_aletheion.py
experiments/: README.md
experiments/level1/: TEST_SCRIPTS_README.md  TRUTHFULQA_README.md  compare_baseline_aletheion.py  compare_models.py  compare_pyramidal.py  test_abstention.py  test_out_of_domain.py  test_truthfulqa.py  train_baseline.py  train_pyramidal.py  train_pyramidal_q1q2.py  visualize_epistemic.py
hf_space/: .gitattributes  DEPLOYMENT.md  README.md  SETUP_SUMMARY.md  app.py  copy_to_hf.sh  requirements.txt  test_local.py
hf_space/src/: __init__.py  attention.py  model.py
hf_space/src/aletheion/: gates.py  loss.py  model.py  pyramid_q1q2_fractal.py  pyramidal_model.py  pyramidal_q1q2_model.py
implementation/baseline/: eval.py  generate.py  train.py
implementation/baseline/data/: __init__.py  prepare.py
implementation/baseline/scripts/: evaluate.sh  train_full.sh  train_small.sh
implementation/baseline/tests/: test_attention.py
outputs/baseline/: config.json  history.json
outputs/baseline/final/: config.json
outputs/comparison/: report.md  results.json
outputs/pyramidal/: config.json  history.json
paper/en/: CHANGELOG.md  Future_add.md  How_to_solve_Skynet__v_1_102.pdfZone.Identifier  abstract.md  adaptive_epistemic_dynamics.tex  aletheion_paper.md  aletheion_paper_v2.tex  background.tex  bibliography.bib  conclusion.tex  discussion.tex  epistemic_softmax.tex  experimental_design.tex  failure_modes.tex  final.md  fractal_architecture.tex  introduction.tex  main.md  main.tex  main_v1.tex  main_v1_0_backup.tex  pyramidal_architecture.tex  related_work.tex  scale_without_structure.tex  skynet_phenomenon.tex  theoretical_analysis.tex  title_abstract_proposals.md  training_varo.tex
paper/en/figures/: fractal_architecture.txt  softmax_comparison.txt  uncertainty_flow.txt
scripts/: format.sh  lint.sh  make_release.sh  test.sh  test_truthfulqa.sh  train_multiseed_pyramidal.sh
src/: __init__.py  attention.py  model.py  tokenizer.py  utils.py
src/aletheion/: __init__.py  gates.py  loss.py  model.py  pyramid.py  pyramid_q1q2_fractal.py  pyramidal_model.py  pyramidal_q1q2_model.py
tests/: test_attention.py  test_model.py  test_training.py
tests/aletheion/: test_gates.py  test_integration.py  test_pyramidal_q1q2.py
